rearranged some files to fix portfolio gallery and also navbar on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -37,11 +37,12 @@ td, th {
 
 
 .container {
-	width: 1200px;
+	width: 75%;
 	margin: 0 auto;
 	background-color: #ffff4d;
 	box-sizing: border-box;
-	padding: 0 40px;
+	padding: 40px 40px;
+	position: relative;
 }
 
 .item_container {
